--- a/index.html
+++ b/index.html
@@ -16,7 +16,25 @@
                 <h1>LIBRARY</h1>
             </div>
             <div class="adding-section">
-
+                <form action="" class="adding-section-container">
+                    <div class="title-input input-container">
+                        <label for="title">Title</label>
+                        <input type="text" id="title" name="title">    
+                    </div>
+                    <div class="author-input input-container">
+                        <label for="author">Author</label>
+                        <input type="text" id="author" name="author">    
+                    </div>
+                    <div class="pages-input input-container">
+                        <label for="pages">Pages</label>
+                        <input type="number" id="pages" name="pages">    
+                    </div>
+                    <div class="status-input input-container">
+                        <label for="status">Read</label>
+                        <input type="checkbox" id="status" name="status">    
+                    </div>
+                    <button type="submit" class="button">Add</button>
+                </form>
             </div>
             <div class="books-display">
                 
