Add book information section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,38 @@
                 </form>
             </div>
             <div class="books-display">
-                
+                <div class="name-header">
+                    <div class="name-cards">
+                        <p>Title</p>
+                    </div>
+                    <div class="name-cards">
+                        <p>Author</p>
+                    </div>
+                    <div class="name-cards">
+                        <p>Pages</p>
+                    </div>
+
+                    <div class="name-cards">
+                        <p>Status</p>
+                    </div>
+                    <div class="name-cards"></div>
+                </div>
+
+                <div class="book-container">
+                    <div class="book-title book-information">
+                        <p></p>
+                    </div>
+                    <div class="book-author book-information">
+                        <p></p>
+                    </div>
+                    <div class="book-pages book-information">
+                        <p></p>
+                    </div>
+                    <div class="book-status book-information">
+                        <p></p>
+                    </div>
+                    <div class="delete-button-container"></div>
+                </div>
             </div>
         </div>
     </body>
